tdf#159474: fix handling of pre-set RepairPackage property

StorageFilterDetect::detect had a wrong logic here, only honoring
repair request in case it haappened interactively inside it. The
pre-existing RepairPackage set to true was treated as "do not try
to repair".

Change-Id: I3fb63a5d72097a79977e8ed734f8e69dd2ea999a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162858
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>